--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		}
 
 		main{
-			width: 90%;
+			width: 96%;
 			margin: 50px auto;
 			column-width: 220px;
 			column-count: 3;
@@ -19,22 +19,57 @@
 			-moz-column-count: 3;
 			-webkit-column-width: 220px;
 			-webkit-column-count: 3;
+
+			column-gap: 20px;
+			-moz-column-gap: 20px;
+			-webkit-column-gap: 20px;
 		}
 		
 		a[title] figure img {
 			width: 100%;
 			height: auto;
+			margin:0;
+			padding:0;
 		}
-
+		
 		main a[title]{
 			text-decoration: none;
-			padding: 1rem;
+			/*padding: 1rem;*/
+			padding: 0;
 			color:#424242;
 			box-shadow: 0 1px 3px rgba(0, 0, 0, .12), 0 1px 2px rgba( 0,0,0, .24);
 			display: inline-block;
+
+			margin-bottom: 20px;
+
+			transition: all .3s cubic-bezier(.25, .8, .25, 1);
+		}
+			
+		main:hover a[title]:not(:hover) {
+			opacity: .6;
+		}
+
+		a[title]:hover {
+			box-shadow: 0 14px 28px rgba(0,0,0, .25), 0 10px 10px rgba(0,0,0, .20);
 		}
 
 
+		p {
+			margin: 0;
+			padding: 0;
+		}
+
+		figcaption {
+			margin: 0;
+			padding: 0;
+
+		}
+
+		figure { /* This moved the images to the edges */
+			margin:0; 
+			padding: 0;
+
+		}
 
 	</style>
 
